--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root{
+  --background-color: white;
+  --btn-color: #0987f2;
+  --btn-text-color: white;
+  --project-card-bg: black;
+  --text-color: black;
+  --form-text-color: grey;
+  --footer-text-color: grey;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+[data-theme = 'dark']{
+  --background-color: rgb(36, 34, 34);
+  --btn-color: #ffffff;
+  --btn-text-color: rgb(255, 255, 255);
+  --project-card-bg: black;
+  --text-color: black;
+  --form-text-color: rgb(241, 237, 237);
+  --footer-text-color: rgb(240, 231, 231);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body{
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 60px;
 }
