--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -24,7 +24,7 @@
             }
         }
     }
-
+ 
     a{
         width: fit-content;
         align-self: center;
@@ -39,5 +39,45 @@
         height: 50px;
         font-size: 20px;
         font-weight: bold;
+        box-shadow: 0 4px 4px rgba(0,0,0,0,0.25);
+        transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
     }
+
+    button:hover{
+        transform: scale(1.05);
+    }
+
+    button:active{
+        transform: translate(2px);
+        box-shadow: 0 2px 2px (0,0,0,0.25);
+    }
+}
+
+.colorModeContainer{
+    position: relative;
+
+}
+
+.colorMode{
+    position:absolute;
+    right: 0;
+    width: 25px;
+
+}
+
+.colorMode:hover{
+    cursor: pointer;
+}
+
+.description{
+    max-width: 24ch;
+
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+
 }
