--- a/src/sections/Skills/SkillsStyles.Module.css
+++ b/src/sections/Skills/SkillsStyles.Module.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -33,4 +33,4 @@
 
 
     }
-}
+} */
