--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -40,3 +40,25 @@ textarea{
     color: var(--form-text-color);
 }
 
+input[type='submit']{
+  background-color: var(--btn-color);
+  color: var(--btn-text-color);
+  border: none;
+  border-radius: 20px;
+  width: 126px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 4px 4px rgba(0,0,0,0,0.25);
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+  margin: auto;
+}
+
+input[ype='submit'] :hover{
+  transform: scale()1.05;
+}
+
+input[ype='submit'] :active{
+  transform: scale()1.05;
+  box-shadow: 0 2px 2px rgba(0, 0, blue0, 0.25);
+}
